--- a/invoice-service/.env.example
+++ b/invoice-service/.env.example
@@ -1,10 +1,8 @@
 # Invoice Service Specific Configuration
-UPLOAD_DIR=uploads
+PDF_STORAGE_PATH=./uploads
 MAX_FILE_SIZE=5242880
-ALLOWED_FILE_TYPES=application/pdf,image/jpeg,image/png
-INVOICE_PREFIX=INV
 
 # Service Queue Configuration
 RABBITMQ_QUEUE=invoices_queue
-RABBITMQ_EXCHANGE=orders_exchange
-RABBITMQ_ROUTING_KEY=order.created
+RABBITMQ_EXCHANGE=invoices_exchange
+RABBITMQ_ROUTING_KEY=invoice.created
