--- a/order-service/package.json
+++ b/order-service/package.json
@@ -27,18 +27,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@nestjs/common": "^11.0.0",
+    "@nestjs/common": "^11.0.12",
     "@nestjs/config": "^11.0.0",
-    "@nestjs/core": "^11.0.0",
+    "@nestjs/core": "^11.0.12",
     "@nestjs/mapped-types": "^2.0.4",
-    "@nestjs/microservices": "^11.0.0",
+    "@nestjs/microservices": "^11.0.12",
     "@nestjs/mongoose": "^11.0.0",
-    "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/platform-fastify": "^11.0.12",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/axios": "^3.0.1",
     "amqplib": "^0.10.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "fastify": "^4.24.0",
     "helmet": "^7.0.0",
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
@@ -48,7 +49,7 @@
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.0",
+    "@nestjs/testing": "^11.0.12",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.4.6",
