--- a/.env.example
+++ b/.env.example
@@ -1,152 +1,23 @@
-# Application Environment
+# Common Environment Variables
 NODE_ENV=development
-DEBUG=order-service:*,invoice-service:*
-LOG_LEVEL=debug
-
-# API Configuration
 API_PREFIX=/api/v1
-RATE_LIMIT_WINDOW=15
-RATE_LIMIT_MAX=100
 
-# MongoDB Credentials
-MONGO_ROOT_USERNAME=root
-MONGO_ROOT_PASSWORD=example
-
-# RabbitMQ Credentials
-RABBITMQ_DEFAULT_USER=user
-RABBITMQ_DEFAULT_PASS=password
-
-# Service Ports
+# Order Service Specific Configuration
 ORDER_SERVICE_PORT=3000
+ORDER_DB_URI=
+
+# Invoice Service Specific Configuration
 INVOICE_SERVICE_PORT=3001
-MONGODB_PORT=27017
-RABBITMQ_PORT=5672
-RABBITMQ_MANAGEMENT_PORT=15672
+INVOICE_DB_URI=
 
-# MongoDB URIs
-ORDER_MONGODB_URI=mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@order-db:27017/orders?authSource
-INVOICE_MONGODB_URI=mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@invoice-db:27017/invoices?authSource
-
-# RabbitMQ URI
+# RabbitMQ Configuration
 RABBITMQ_URI=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@rabbitmq:5672
+RABBITMQ_QUEUE=
+RABBITMQ_EXCHANGE=
+RABBITMQ_DEFAULT_USER=
+RABBITMQ_DEFAULT_PASS=
 
-# Application Environment
-NODE_ENV=development
-DEBUG=order-service:*,invoice-service:*
-LOG_LEVEL=debug
-
-# API Configuration
-API_PREFIX=/api/v1
-RATE_LIMIT_WINDOW=15
-RATE_LIMIT_MAX=100
-
-# MongoDB Credentials
-MONGO_ROOT_USERNAME=root
-MONGO_ROOT_PASSWORD=example
-
-# RabbitMQ Credentials
-RABBITMQ_DEFAULT_USER=user
-RABBITMQ_DEFAULT_PASS=password
-
-# Service Ports
-ORDER_SERVICE_PORT=3000
-INVOICE_SERVICE_PORT=3001
-MONGODB_PORT=27017
-RABBITMQ_PORT=5672
-RABBITMQ_MANAGEMENT_PORT=15672
-
-# MongoDB URIs
-ORDER_MONGODB_URI=mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@order-db:27017/orders?authSource
-INVOICE_MONGODB_URI=mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@invoice-db:27017/invoices?authSource
-
-# RabbitMQ URI
-RABBITMQ_URI=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@rabbitmq:5672
-
-# Application Environment
-NODE_ENV=development
-DEBUG=order-service:*,invoice-service:*
-LOG_LEVEL=debug
-
-# API Configuration
-API_PREFIX=/api/v1
-RATE_LIMIT_WINDOW=15
-RATE_LIMIT_MAX=100
-
-# MongoDB Credentials
-MONGO_ROOT_USERNAME=root
-MONGO_ROOT_PASSWORD=example
-
-# RabbitMQ Credentials
-RABBITMQ_DEFAULT_USER=user
-RABBITMQ_DEFAULT_PASS=password
-
-# Service Ports
-ORDER_SERVICE_PORT=3000
-INVOICE_SERVICE_PORT=3001
-MONGODB_PORT=27017
-RABBITMQ_PORT=5672
-RABBITMQ_MANAGEMENT_PORT=15672
-
-# MongoDB URIs
-ORDER_MONGODB_URI=mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@order-db:27017/orders?authSource
-INVOICE_MONGODB_URI=mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@invoice-db:27017/invoices?authSource
-
-# RabbitMQ URI
-RABBITMQ_URI=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@rabbitmq:5672
-
-# Application Environment
-NODE_ENV=development
-DEBUG=order-service:*,invoice-service:*
-LOG_LEVEL=debug
-
-# API Configuration
-API_PREFIX=/api/v1
-RATE_LIMIT_WINDOW=15
-RATE_LIMIT_MAX=100
-
-# MongoDB Credentials
-MONGO_ROOT_USERNAME=root
-MONGO_ROOT_PASSWORD=example
-
-# RabbitMQ Credentials
-RABBITMQ_DEFAULT_USER=user
-RABBITMQ_DEFAULT_PASS=password
-
-# Service Ports
-ORDER_SERVICE_PORT=3000
-INVOICE_SERVICE_PORT=3001
-MONGODB_PORT=27017
-RABBITMQ_PORT=5672
-RABBITMQ_MANAGEMENT_PORT=15672
-
-# MongoDB URIs
-ORDER_MONGODB_URI=mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@order-db:27017/orders?authSource
-INVOICE_MONGODB_URI=mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@invoice-db:27017/invoices?authSource
-
-# RabbitMQ URI
-RABBITMQ_URI=amqp://${RABBITMQ_DEFAULT_USER}:${RABBITMQ_DEFAULT_PASS}@rabbitmq:5672
-
-# Application Environment
-NODE_ENV=development
-DEBUG=order-service:*,invoice-service:*
-LOG_LEVEL=debug
-
-# API Configuration
-API_PREFIX=/api/v1
-RATE_LIMIT_WINDOW=15
-RATE_LIMIT_MAX=100
-
-# MongoDB Credentials
-MONGO_ROOT_USERNAME=root
-MONGO_ROOT_PASSWORD=example
-
-# RabbitMQ Credentials
-RABBITMQ_DEFAULT_USER=user
-RABBITMQ_DEFAULT_PASS=password
-
-# Service Ports
-ORDER_SERVICE_PORT=3000
-INVOICE_SERVICE_PORT=3001
-MONGODB_PORT=27017
-RABBITMQ_PORT=5672
-RABBITMQ_MANAGEMENT_PORT=15672
+# Port Configurations
+MONGODB_PORT=
+RABBITMQ_PORT=
+RABBITMQ_MANAGEMENT_PORT=
