--- a/invoice-service/.env.example
+++ b/invoice-service/.env.example
@@ -1,6 +1,8 @@
 # Invoice Service Specific Configuration
-PDF_STORAGE_PATH=./uploads
+UPLOAD_DIR=uploads
 MAX_FILE_SIZE=5242880
+ALLOWED_FILE_TYPES=application/pdf,image/jpeg,image/png
+INVOICE_PREFIX=INV
 
 # Service Queue Configuration
 RABBITMQ_QUEUE=invoices_queue
