--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -10,7 +10,7 @@ RUN npm run build
 EXPOSE 3000
 HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
     CMD wget --no-verbose --tries=1 --spider http://localhost:3000/health || exit 1
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "start:dev"]
 
 # Production stage
 FROM base AS production
